--- a/index.html
+++ b/index.html
@@ -40,23 +40,38 @@
 			<div class="four collumns">
 				<h5>Rectangles with variable dimensions</h5>
 				<p>In this exercise, my goal was to ensure that the dimensions and shades of the rectangles would change dynamically depending on the position of the mouse. <a href="https://editor.p5js.org/v.kalkounou2006/full/2jqhEai1B" class="project-link"> Click to see my project </a></p>
-				<img src="images/rectangles with changing dimensions.png" class="scale with grid" style="width:40%">
+				<img src="images/rectangles with changing dimensions.png" class="scale with grid" style="width:30%">
 			</div>
 			<div class="four columns">
 				<h5>Random circles</h5>
 				<p>In this exercise, my goal was to create a program that draws circles with random sizes, colors and slides, in random positions on the screen. <a href="https://editor.p5js.org/v.kalkounou2006/full/D4nKttBkF" class="project-link"> Click to see my project </a></p>
-				<img src="images/random circles.png" class="scale with grid" style="width:40%">
+				<img src="images/random circles.png" class="scale with grid" style="width:30%">
 			</div>
 			<div class="four columns">
 				<h5>Random lines</h5>
 				<p>In this exercise, my goal was to create a program that draws lines connecting random points on the top and bottom sides of the canvas, with random colors and transparency. <a href="https://editor.p5js.org/v.kalkounou2006/full/0tKuZnGlL" class="project-link"> Click to see my project </a></p>
-				<img src="images/random lines.png" class="scale with grid" style="width:40%">
+				<img src="images/random lines.png" class="scale with grid" style="width:30%">
 			</div>
 			<div class="four collumns">
 				<h5> A work of art inspired by Sol Lewitt</h5>
 				<p>While observing Sol Lewitt's artworks I noticed the following pattern. In most of his paintings he uses basic geometric shapes which he incorporates into an irregular canvas. So I decided to try to do something similar, but in my work there are some variables that define the position of the shapes, their size, and the color of their outline. My source of inspiration was the following paintings. <a href="https://editor.p5js.org/v.kalkounou2006/full/VtmgO_NU6" class="project-link"> Click to see my project </a></p>
-				<img src="images/inspiration.png" class="scale with grid" style="width:40%">
-				<img src="images/inspired by Sol Lewitt.png" class="scale with grid" style="width:40%">
+				<img src="images/inspiration.png" class="scale with grid" style="width:30%">
+				<img src="images/inspired by Sol Lewitt.png" class="scale with grid" style="width:30%">
+			</div>
+			<div class="four collumns">
+				<h5>Interactive canvas</h5>
+				<p>In this exercise, my goal was to create a fixed and defined initial canvas and then divide the resulting squares into smaller cells of random number. Also if the mouse is in a subcell, then it changes color. <a href="https://editor.p5js.org/v.kalkounou2006/sketches/ChBCqusvP" class="project-link"> Click to see my project </a></p>
+				<img src="images/interactive canvas.png" class="scale with grid" style="width:30%">
+			</div>
+            <div class="four collumns">
+				<h5>Fractal city</h5>
+				<p>In this exercise, my goal was to create a code (program) that constructs a fractal city using recursion. A pattern that repeats itself at different depths until it reaches a limit where it stops is called a fractal. This repetition is called recursion. <a href="https://editor.p5js.org/v.kalkounou2006/sketches/0DvlH39c6" class="project-link"> Click to see my project </a></p>
+				<img src="images/fractal city.png" class="scale with grid" style="width:30%">
+			</div>
+            <div class="four collumns">
+				<h5>Snake game</h5>
+				<p>In this exercise, my goal was to make a game with a snake that eats the food on the screen. When the snake eats something then, that food disappears from the screen. There are three types of food, simple food, candy and fruit. If the snake eats food or fruit then its body gets bigger and if it eats candy then its body gets smaller. Also at random places on the screen there are buildings that block the snake's movement and a ball that moves, if the snake touches a building or the ball then the game ends. <a href="https://editor.p5js.org/v.kalkounou2006/sketches/thD7rlOxB" class="project-link"> Click to see my project </a></p>
+				<img src="images/snake game.png" class="scale with grid" style="width:30%">
 			</div>
 		</div>
 		<footer>
