--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
 
 		<div class="row half-bottom">
 			<div class="four collumns">
+				<h5>How to make a lemonade</h5>
+				<p>In the first exercise, the goal was to understand how the pseudocode and flowchart work. For this we had to describe a process with the help of a pseudocode and a flowchart. I chose the preparation of a lemonade.</p> <iframe src="images/kalkounou_vasiliki_assignment_01.pdf" width="50%" height="600px"></iframe>
+			</div>
+			<div class="four collumns">
 				<h5>Rectangles with variable dimensions</h5>
 				<p>In this exercise, my goal was to ensure that the dimensions and shades of the rectangles would change dynamically depending on the position of the mouse. <a href="https://editor.p5js.org/v.kalkounou2006/full/2jqhEai1B" class="project-link"> Click to see my project </a></p>
 				<img src="images/rectangles with changing dimensions.png" class="scale with grid" style="width:30%">
