--- a/index.html
+++ b/index.html
@@ -77,6 +77,10 @@
 				<p>In this exercise, my goal was to make a game with a snake that eats the food on the screen. When the snake eats something then, that food disappears from the screen. There are three types of food, simple food, candy and fruit. If the snake eats food or fruit then its body gets bigger and if it eats candy then its body gets smaller. Also at random places on the screen there are buildings that block the snake's movement and a ball that moves, if the snake touches a building or the ball then the game ends. <a href="https://editor.p5js.org/v.kalkounou2006/sketches/thD7rlOxB" class="project-link"> Click to see my project </a></p>
 				<img src="images/snake game.png" class="scale with grid" style="width:30%">
 			</div>
+			<div class="four collumns">
+				<h5>Earthquake simulation</h5>
+				<p>This was a team project in which we created an earthquake simulation using p5.js. We were inspired by the concepts of simulation, parameterization and data visualization. We also drew inspiration from our Structural Engineering II course and our 3rd grade of High School Physics course. We drew a world map and represented the capitals of the most earthquake-prone countries with dots. By clicking on a dot, the user is taken to an interface where a historical earthquake is simulated parametrically for each city.The team members were: Kleanthi Theodorakopoulou, Vasiliki Kalkounou, Marina Kaloeidi. <a href="https://editor.p5js.org/v.kalkounou2006/sketches/Slbchf9LE" class="project-link"> Click to see our project </a> <a href="https://vasiliki2006.github.io/team/" class="project-link"> Click to see our site </a> </p> <iframe src="images/earthquake simulation.pdf" width="50%" height="600px"></iframe>
+			</div>
 		</div>
 		<footer>
 			<p>©Vasiliki Kalkounou 2025 </p>
